2006-05-13  Michael Natterer  <mitch@gimp.org>

	Added some new text layer actions and menu items (bug #316299).

	* app/actions/layers-actions.c: added actions for "Text to Path",
	"Text along Path" and "Text to Selection" (use the alpha to
	selection callback for text to selection)

	* app/actions/layers-commands.[ch]: added
	layers_text_to_vectors_cmd_callback() and
	layers_text_along_vectors_cmd_callback().

	* app/widgets/gimphelp-ids.h: help IDs for the new actions.

	* menus/image-menu.xml.in
	* menus/layers-menu.xml: added them to the layers menus in the
	image window and the layers dialog.

2006-05-13  Hans Breuer  <hans@breuer.org>

	* **/makefile.msc app/gimpcore.def : updated
	* app/core/gimp-util.c : dont include "config/gimpbaseconfig.c", it
	gives an redefinition error with msvc. Instead include 
	config/gimpbaseconfig.h and libgimpconfig/gimpconfig-path.h

	* plug-ins/common/psd_save.c : fix c99isms (declarations only at the
	start of a block)

2006-05-12  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpview.h: save 20 bytes per instance by using
	single bits instead of 6 gbooleans.

	* app/widgets/gimpview.c: some code cleanup.

	* app/widgets/gimpviewrendererbrush.c: don't #include "gimpbrush.h".

	* app/widgets/gimpviewrendererbuffer.c: #include "gimpviewable.h"
	instead of "gimpbuffer.h".

	* app/widgets/gimpviewrenderergradient.c
	* app/widgets/gimpviewrendererimagefile.c
	* app/widgets/gimpviewrendererimagefile.h: micro cosmetics.

2006-05-12  Michael Natterer  <mitch@gimp.org>

	* plug-ins/imagemap/imap_csim.y: fix warning about unused return
	value of g_list_append().

	* plug-ins/imagemap/imap_csim_parse.[ch]: regenerated (using
	bison 2.1 instead of 2.0, lots of things changed, please test).

2006-05-12  Michael Natterer  <mitch@gimp.org>

	* configure.in: check for gmodule-no-export-2.0, not for
	gmodule-2.0. Also removed gobject-2.0 from the gmodule check, i
	have no idea why it was there.
