@@ -783,6 +783,13 @@ gimp_layer_transform (GimpItem               *item,
 {
   GimpLayer *layer = GIMP_LAYER (item);
 
+#ifdef __GNUC__
+#warning FIXME: make interpolated transformations work on layers without alpha
+#endif
+  if (interpolation_type != GIMP_INTERPOLATION_NONE &&
+      ! gimp_drawable_has_alpha (GIMP_DRAWABLE (item)))
+    gimp_layer_add_alpha (layer);
+
   GIMP_ITEM_CLASS (parent_class)->transform (item, context, matrix, direction,
                                              interpolation_type,
                                              supersample, recursion_level,
